corpus/if_block
=====================
If Block
=====================

<if>
  <condition type:"AND">
    <custom_item>
      description : "Description"
      info : "Info"
      solution : "Solution"
    </custom_item>
  </condition>
  <then>
    <custom_item>
      description : "Description"
      info : "Info"
      solution : "Solution"
      </custom_item>
  </then>
  <else>
    <custom_item>
      description : "Description"
      info : "Info"
      solution : "Solution"
      </custom_item>
    </else>
</if>


---

(audit
  (if_block
    (condition_block
      (custom_item
        (check_string_element)
        (check_string_element)
        (check_string_element)))
    (then_block
      (custom_item
        (check_string_element)
        (check_string_element)
        (check_string_element)))
    (else_block
      (custom_item
        (check_string_element)
        (check_string_element)
        (check_string_element)))))
